// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should support resolving using the "file" schema (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`loader should support resolving using the "file" schema (dart-sass) (sass): errors 1`] = `Array []`;

exports[`loader should support resolving using the "file" schema (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`loader should support resolving using the "file" schema (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`loader should support resolving using the "file" schema (dart-sass) (scss): errors 1`] = `Array []`;

exports[`loader should support resolving using the "file" schema (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`loader should support resolving using the "file" schema (node-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333; }

nav ul {
  margin: 0;
  padding: 0;
  list-style: none; }

nav li {
  display: inline-block; }

nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none; }

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px; }

.message, .success, .error, .warning {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333; }

.success {
  border-color: green; }

.error {
  border-color: red; }

.warning {
  border-color: yellow; }

.foo:before {
  content: \\"\\"; }

.bar:before {
  content: \\"∑\\"; }
"
`;

exports[`loader should support resolving using the "file" schema (node-sass) (sass): errors 1`] = `Array []`;

exports[`loader should support resolving using the "file" schema (node-sass) (sass): warnings 1`] = `Array []`;

exports[`loader should support resolving using the "file" schema (node-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333; }

nav ul {
  margin: 0;
  padding: 0;
  list-style: none; }

nav li {
  display: inline-block; }

nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none; }

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px; }

.foo:before {
  content: \\"\\"; }

.bar:before {
  content: \\"∑\\"; }
"
`;

exports[`loader should support resolving using the "file" schema (node-sass) (scss): errors 1`] = `Array []`;

exports[`loader should support resolving using the "file" schema (node-sass) (scss): warnings 1`] = `Array []`;
